Chris's editor had its bug fixed, so the workaround is no longer needed

--- a/private/refman/refman.tex
+++ b/private/refman/refman.tex
@@ -64,7 +64,7 @@
 
 
 \newcolumntype{E}{>{\quad\refstepcounter{grammaritem}}l<{\ (\arabic{grammaritem})}}
-\input badline
+\newcolumntype{R}{@{\quad}>{$}r<{$}@{\quad}}
  
 \title{RZ Reference Manual}
 \date{Version of: \today}
