--- a/private/cie/cie.tex
+++ b/private/cie/cie.tex
@@ -1,5 +1,3 @@
-\documentclass{llncs}
-
 \pagestyle{plain}
 
 \usepackage{amsmath}
@@ -17,13 +15,6 @@
 
 
 \input{macros.tex}
-
-% To distinguish between the long and short version
-\newif\iflong
-% Uncommment this for short version:
-%\longfalse
-% Uncomment this for long version:
-\longtrue
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -139,10 +130,7 @@ By using the realizability
 \input{wtype.tex}
 \fi % iflong
 
-
-\end{document}
-
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: t
+%%% TeX-master: "cie-long.tex"
 %%% End: 
