--- a/private/cie/comparison.tex
+++ b/private/cie/comparison.tex
@@ -56,11 +56,11 @@ realizability~\cite{BirkedalL:devttc}, while topological and domain
 representations~\cite{Bla97a,Bauer:Birkedal:Scott:98} are based on
 realizability over the graph model
 $\mathcal{P}\omega$~\cite{ScottD:dattl}. A common feature is
-that they use models of computation which are more suitable for the
+that they use models of computation which are well suited for the
 theoretical studies of computability. 
 
 \iflong
-Other approaches are based on programming languages augmented with
+Other approaches are based on simple programming languages augmented with
 datatypes for real numbers~\cite{escardo97:_pcf,marcial-romero04:_seman}
 and topological algebras~\cite{TZ98}, or machine models augmented with
 (suitably chosen subsets of) real numbers such as Real
@@ -81,7 +81,7 @@ Mathematics~\cite{Bishop:Bridges:85}.
 
 \else % \iflong
 
-Approaches based on programming languages augmented with datatypes for
+Approaches based on simple programming languages augmented with datatypes for
 real numbers~\cite{escardo97:_pcf,marcial-romero04:_seman} and topological
 algebras~\cite{TZ98}, and machines augmented with (suitably chosen
 subsets of) real
