--- a/private/cie/logic.tex
+++ b/private/cie/logic.tex
@@ -90,7 +90,7 @@
 The input to RZ consists of one or more theories.
 A RZ \emph{theory} is a generalized logical signature with associated
 axioms, similar to a Coq module signature. Theories describe
-of \emph{models}, or implementations. A summary of the input
+\emph{models}, or implementations. A summary of the input
 language appears in Figure~\ref{fig:input}.
 
 \iflong
