--- a/private/cie/examples.tex
+++ b/private/cie/examples.tex
@@ -303,7 +303,7 @@ can determine whether a finite set is empty.  In the case of a set of exact
 real numbers, we cannot compute their sum, but we could compute maximum or minimum.
 
 More common set implementations (e.g., the \texttt{Set} module in the OCaml standard library)
-implement sets over values with either decidable total order; these could also be
+implement sets over values with decidable total order; these could also be
 formalized in RZ.
 \fi % \iflong
 
